refactor: get 응답구조를 record로 변경