@@ -13,7 +13,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,19 +27,21 @@ public class PlaceService {
      */
     public ResponseEntity<PlaceResponseDto> getLocationInfo(String query) {
         try {
+            // 네이버 장소 검색 API 호출
             NaverSearchResponse response = naverLocalSearchClient.searchLocal(query, 5);
 
+            // 필요한 장소 정보만 추출
             List<PlaceResponseDto.PlaceDto> locationInfoList = response.getItems().stream()
                     .map(item -> new PlaceResponseDto.PlaceDto(
                             Float.parseFloat(item.getMapy()),
                             Float.parseFloat(item.getMapx()),
                             item.getRoadAddress(),
-                            StringUtils.replace(item.getTitle(), "<b>", "").replace("</b>", "")) // <b> 태그 제거
-                    ).collect(Collectors.toList());
+                            // 장소 정보에 있는 불필요한 <b>와 </b>값 제거
+                            StringUtils.replace(item.getTitle(), "<b>", "").replace("</b>", "")
+                    )).toList();
 
-            PlaceResponseDto placeResponse = new PlaceResponseDto(locationInfoList);
             log.info("장소 정보 조회 성공: {}", locationInfoList);
-            return ResponseEntity.ok(placeResponse);
+            return ResponseEntity.ok(new PlaceResponseDto(locationInfoList));
         } catch (FeignException e) {
             log.error("네이버 API 호출 실패: {}", e.getMessage(), e);
             throw new NaverApiException(ExceptionCode.NAVER_API_ERROR);
